rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: "not-applicable"
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
      # management contains the web interface
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
          protocol: TCP
          name: amqp
        - containerPort: 15672
          protocol: TCP
          name: http
        volumeMounts:
        - name: rabbitmq-data
        # physical storage
          mountPath: "/var/lib/rabbitmq"
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
