rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      port: 15672
      targetPort: 15672
      protocol: TCP
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
